[gd_scene load_steps=40 format=3 uid="uid://c6rpdqb17327o"]

[ext_resource type="Script" path="res://scenes/entity/buildings/module/module.gd" id="1_bn7lv"]
[ext_resource type="PackedScene" uid="uid://cxrcptlbws3jo" path="res://scenes/ui/actions/building/building_actions.tscn" id="2_8odok"]
[ext_resource type="Texture2D" uid="uid://q2i8l25wbq8q" path="res://scenes/entity/icons/buildings/basic_module.png" id="2_ikse0"]
[ext_resource type="Texture2D" uid="uid://bucjgj3sclwdy" path="res://scenes/entity/buildings/module/basic_module.png" id="3_273oi"]
[ext_resource type="Script" path="res://scenes/entity/components/hitbox/hitbox_component.gd" id="4_f7q17"]
[ext_resource type="Shader" path="res://unit_outline.gdshader" id="5_ubt1g"]
[ext_resource type="PackedScene" uid="uid://bc1ifnp3up1rc" path="res://scenes/entity/components/health/health_component.tscn" id="5_y1nve"]
[ext_resource type="PackedScene" uid="uid://nlcnfwavt8yc" path="res://scenes/entity/components/selection/selection_component.tscn" id="6_4kqow"]
[ext_resource type="PackedScene" uid="uid://3l1kpsyqp8xw" path="res://scenes/entity/components/network/network_component.tscn" id="7_8ntal"]
[ext_resource type="Script" path="res://scenes/entity/entity_stats.gd" id="9_b3bry"]
[ext_resource type="PackedScene" uid="uid://b17vgvl5v7hpa" path="res://scenes/entity/components/death/death_component.tscn" id="10_phna6"]
[ext_resource type="PackedScene" uid="uid://cnc4fn42qv356" path="res://scenes/entity/components/action/action_component.tscn" id="11_carw8"]
[ext_resource type="Script" path="res://scenes/entity/actions/deconstruct/deconstruct_building.gd" id="12_5b3yh"]
[ext_resource type="Texture2D" uid="uid://be1fkpcexfama" path="res://scenes/entity/buildings/module/basic_module_destroyed.png" id="12_d8f5k"]
[ext_resource type="Texture2D" uid="uid://bjd8p7m0fgmci" path="res://scenes/entity/icons/action/delete_building.png" id="13_bh0vm"]
[ext_resource type="Script" path="res://scenes/entity/actions/modes/change_mode.gd" id="16_ewdro"]
[ext_resource type="Script" path="res://scenes/entity/actions/modes/module/module_building_mode.gd" id="17_ajqrq"]
[ext_resource type="Texture2D" uid="uid://cvhilbk74ltjs" path="res://scenes/entity/icons/action/upgrade_range.png" id="17_wufj3"]
[ext_resource type="Texture2D" uid="uid://cfc37larti0qq" path="res://scenes/entity/icons/action/upgrade_health.png" id="18_njh7b"]
[ext_resource type="Script" path="res://scenes/entity/components/upgrade/upgrade_component.gd" id="19_7su3k"]
[ext_resource type="Resource" uid="uid://dsgqrepg8051h" path="res://scenes/entity/effects/upgrade/range/range_upgrade_effect.tres" id="19_263q7"]
[ext_resource type="Texture2D" uid="uid://414sca4b2n4e" path="res://scenes/entity/icons/action/upgrade_damage.png" id="19_mp55u"]
[ext_resource type="Resource" uid="uid://1arnatn00h1c" path="res://scenes/entity/effects/upgrade/damage/damage_upgrade_effect.tres" id="20_2gdqj"]
[ext_resource type="Script" path="res://scripts/resources/stat.gd" id="20_f3irk"]
[ext_resource type="Script" path="res://scripts/resources/effect.gd" id="20_oihjf"]
[ext_resource type="Resource" uid="uid://b6yinjxwioedq" path="res://scenes/entity/effects/upgrade/health/health_upgrade_effect.tres" id="21_vc5pd"]
[ext_resource type="Script" path="res://scenes/entity/components/effect/effect_propagation_component.gd" id="22_x6p63"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vihiq"]
properties/0/path = NodePath("../HealthComponent:health")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("../HealthComponent:max_health")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ucsn"]
resource_local_to_scene = true
shader = ExtResource("5_ubt1g")
shader_parameter/width = null
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ila"]
atlas = ExtResource("3_273oi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkluu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ila")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwgbt"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7th70"]
size = Vector2(148, 151)

[sub_resource type="Resource" id="Resource_jgasi"]
script = ExtResource("20_f3irk")
display_name = ""
name = "base_range"
value = 100.0

[sub_resource type="Resource" id="Resource_2tdox"]
script = ExtResource("20_f3irk")
display_name = ""
name = "max_health"
value = 100.0

[sub_resource type="Resource" id="Resource_mvj00"]
script = ExtResource("20_f3irk")
display_name = ""
name = "base_range"
value = 100.0

[sub_resource type="Resource" id="Resource_8hhxm"]
script = ExtResource("20_f3irk")
display_name = ""
name = "max_health"
value = 100.0

[sub_resource type="Resource" id="Resource_fbblq"]
script = ExtResource("20_f3irk")
display_name = ""
name = "base_range"
value = 100.0

[sub_resource type="Resource" id="Resource_le8jg"]
script = ExtResource("20_f3irk")
display_name = ""
name = "max_health"
value = 100.0

[node name="Module" type="AnimatableBody2D" node_paths=PackedStringArray("sprite", "health", "death", "action_controller", "upgrade", "propagation", "action_panel", "hitbox", "selection", "network", "stats") groups=["building", "navigation", "player_entity"]]
collision_layer = 38
collision_mask = 0
input_pickable = true
script = ExtResource("1_bn7lv")
sprite = NodePath("AnimatedSprite2D")
health = NodePath("HealthComponent")
death = NodePath("DeathComponent")
action_controller = NodePath("ActionComponent")
upgrade = NodePath("UpgradeComponent")
propagation = NodePath("EffectPropagationComponent")
action_panel = NodePath("BuildingActions")
hitbox = NodePath("HitboxComponent")
selection = NodePath("SelectionComponent")
network = NodePath("NetworkComponent")
stats = NodePath("EntityStats")
display_name = "Module"
str_type = "module"
icon = ExtResource("2_ikse0")

[node name="NetworkComponent" parent="." instance=ExtResource("7_8ntal")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="NetworkComponent"]
replication_config = SubResource("SceneReplicationConfig_vihiq")

[node name="BuildingActions" parent="." instance=ExtResource("2_8odok")]
z_index = 3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_0ucsn")
position = Vector2(-1, -6)
sprite_frames = SubResource("SpriteFrames_kkluu")

[node name="HitboxComponent" type="CollisionShape2D" parent="." node_paths=PackedStringArray("health_component", "character")]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_gwgbt")
script = ExtResource("4_f7q17")
health_component = NodePath("../HealthComponent")
character = NodePath("..")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("5_y1nve")]
z_index = 3
position = Vector2(0, -39)
scale = Vector2(1, 1)
stats = NodePath("../EntityStats")

[node name="SelectionComponent" parent="." node_paths=PackedStringArray("network", "sprites", "body", "node_shown_on_hover") instance=ExtResource("6_4kqow")]
network = NodePath("../NetworkComponent")
sprites = [NodePath("../AnimatedSprite2D")]
body = NodePath("..")
show_node_on_hover = true
node_shown_on_hover = [NodePath("../EffectPropagationComponent/ColorRect")]

[node name="EntityStats" type="Node2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("9_b3bry")
health = NodePath("../HealthComponent")
max_health = 500

[node name="DeathComponent" parent="." node_paths=PackedStringArray("sprite", "health", "body", "corpse", "delete_timer") instance=ExtResource("10_phna6")]
sprite = NodePath("../AnimatedSprite2D")
health = NodePath("../HealthComponent")
body = NodePath("..")
corpse = NodePath("Corpse")
delete_timer = NodePath("Timer")
corpse_time = 5

[node name="Corpse" type="Sprite2D" parent="DeathComponent"]
position = Vector2(-1, -6)
texture = ExtResource("12_d8f5k")

[node name="Timer" type="Timer" parent="DeathComponent"]

[node name="ActionComponent" parent="." node_paths=PackedStringArray("body", "actions_container") instance=ExtResource("11_carw8")]
body = NodePath("..")
actions_container = NodePath(".")

[node name="RemoveBuilding" type="Node2D" parent="ActionComponent" node_paths=PackedStringArray("building", "cooldown", "time")]
script = ExtResource("12_5b3yh")
building = NodePath("../..")
title = "Remove Module"
icon = ExtResource("13_bh0vm")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")
description = "Delete this building"

[node name="Timer" type="Timer" parent="ActionComponent/RemoveBuilding"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="ActionComponent/RemoveBuilding"]
wait_time = 0.2

[node name="ChangeModeBuilding" type="Node2D" parent="ActionComponent" node_paths=PackedStringArray("possible_mode", "building_ui", "cooldown", "time")]
script = ExtResource("16_ewdro")
possible_mode = [NodePath("RangeTurretMode"), NodePath("DamageTurretMode"), NodePath("HealthTurretMode")]
building_ui = NodePath("../../BuildingActions")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")

[node name="RangeTurretMode" type="Node2D" parent="ActionComponent/ChangeModeBuilding" node_paths=PackedStringArray("entity", "cooldown", "time")]
script = ExtResource("17_ajqrq")
entity = NodePath("../../..")
effects = Array[ExtResource("20_oihjf")]([ExtResource("19_263q7")])
title = "Range Mode"
icon = ExtResource("18_njh7b")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")
description = "Buildings in area have increased range and area of effect for decreased attack speed."

[node name="Timer" type="Timer" parent="ActionComponent/ChangeModeBuilding/RangeTurretMode"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="ActionComponent/ChangeModeBuilding/RangeTurretMode"]
wait_time = 0.2

[node name="DamageTurretMode" type="Node2D" parent="ActionComponent/ChangeModeBuilding" node_paths=PackedStringArray("entity", "cooldown", "time")]
script = ExtResource("17_ajqrq")
entity = NodePath("../../..")
effects = Array[ExtResource("20_oihjf")]([ExtResource("20_2gdqj")])
title = "Damage Mode"
icon = ExtResource("19_mp55u")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")
description = "Buildings in area have increased damage and attack speed."

[node name="Timer" type="Timer" parent="ActionComponent/ChangeModeBuilding/DamageTurretMode"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="ActionComponent/ChangeModeBuilding/DamageTurretMode"]
wait_time = 0.2

[node name="HealthTurretMode" type="Node2D" parent="ActionComponent/ChangeModeBuilding" node_paths=PackedStringArray("entity", "cooldown", "time")]
script = ExtResource("17_ajqrq")
entity = NodePath("../../..")
effects = Array[ExtResource("20_oihjf")]([ExtResource("21_vc5pd")])
title = "Health Mode"
icon = ExtResource("17_wufj3")
cooldown = NodePath("Cooldown")
time = NodePath("Timer")
description = "Buildings in area have increased life and regeneration rate."

[node name="Timer" type="Timer" parent="ActionComponent/ChangeModeBuilding/HealthTurretMode"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="ActionComponent/ChangeModeBuilding/HealthTurretMode"]
wait_time = 0.2

[node name="Timer" type="Timer" parent="ActionComponent/ChangeModeBuilding"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="ActionComponent/ChangeModeBuilding"]
wait_time = 0.2

[node name="EffectPropagationComponent" type="Area2D" parent="." node_paths=PackedStringArray("entity")]
collision_layer = 2
collision_mask = 32
input_pickable = false
script = ExtResource("22_x6p63")
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectPropagationComponent"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_7th70")

[node name="ColorRect" type="ColorRect" parent="EffectPropagationComponent"]
custom_minimum_size = Vector2(150, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -74.0
offset_right = 74.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.04, 0.744, 1, 0.14902)

[node name="UpgradeComponent" type="Node2D" parent="." node_paths=PackedStringArray("action_controller", "stats")]
script = ExtResource("19_7su3k")
action_controller = NodePath("../ActionComponent")
stats = NodePath("../EntityStats")
upgrades_per_tier = {
0: [],
1: [SubResource("Resource_jgasi"), SubResource("Resource_2tdox")],
2: [SubResource("Resource_mvj00"), SubResource("Resource_8hhxm")],
3: [SubResource("Resource_fbblq"), SubResource("Resource_le8jg")]
}
